Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-7671

Problem building on debian (unstable) distribution:

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • qpid-cpp-1.36.0
    • qpid-cpp-1.37.0
    • C++ Build
    • None

    Description

      This does not work:

      cmake . -DCMAKE_BUILD_TYPE=DebWithRelInfo
      make -j4
      ...
      [ 34%] Linking CXX shared library libqpidcommon.so
      CMakeFiles/qpidcommon.dir/qpid/log/Logger.cpp.o: In function `boost::serialization::singleton<qpid::log::Logger>::get_mutable_instance()':
      Logger.cpp.text._ZN5boost13serialization9singletonIN4qpid3log6LoggerEE20get_mutable_instanceEv[_ZN5boost13serialization9singletonIN4qpid3log6LoggerEE20get_mutable_instanceEv]+0x5): undefined reference to `boost::serialization::singleton_module::is_locked()'
      collect2: error: ld returned 1 exit status
      src/CMakeFiles/qpidcommon.dir/build.make:5583: recipe for target 'src/libqpidcommon.so.2.0.0' failed
      make[2]: *** [src/libqpidcommon.so.2.0.0] Error 1
      CMakeFiles/Makefile2:1271: recipe for target 'src/CMakeFiles/qpidcommon.dir/all' failed
      make[1]: *** [src/CMakeFiles/qpidcommon.dir/all] Error 2
      Makefile:160: recipe for target 'all' failed
      make: *** [all] Error 2

      In both cases:

      Boost version: 1.62.0
      – Found the following Boost libraries:
      – program_options
      – system

      Attachments

        Activity

          People

            aconway Alan Conway
            iboverma Irina Boverman
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: