QPID-7671: Problem building on debian (unstable) distribution

Replaced the one use of boost::serialization::singleton<Logger> with a simple
POD-mutex singleton implementation.